# rodrigo_labTFG

./: .buildinfo  .dockerignore  .gitignore  Dockerfile  README.md  build_docs.sh  columbo-cli  conf.html  genindex.html  modules.html  overview.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  tfg.docx
.github/workflows/: docker-publish.yml
_modules/: index.html
_modules/columbo_design/: beacon.html  data_storage.html  dna_analysis_2.html  modsum.html  parse_analysis.html  primer_design.html
_sources/: index.rst.txt
data/: data.json  data.pkl  datos_lista.json  datos_lista.pkl  entry.txt  mers.fasta  output_NGG.json  output_NGG.pkl  output_PRIMERS.json  output_PRIMERS.pkl  test.fasta
docs/: columbo_design.rst  conf.py  index.rst  modules.rst  overview.rst  pickle.pkl
docs/_build/doctrees/: columbo_design.doctree  environment.pickle  index.doctree  modules.doctree  overview.doctree
docs/_build/html/: columbo_design.html  index.html  objects.inv  overview.html  searchindex.js
docs/_build/html/_modules/columbo_design/: calculator.html  cli.html  cli_2.html  core.html  (+3 more)
docs/_build/html/_sources/: overview.rst.txt
src/: Issue_2.py  Makefile  calculator.py  cli.py  cli_2.py  core.py  core_2.py  core_3.py  data_storage.py  dna_analysis.py  dna_analysis_2.py  entry.txt  hw.py  issue_4_2.py  output_PRIMERS.json  parse_analysis.py  prueba.py
src/columbo_design/: beacon.py  calculator.py  cli.py  cli_2.py  core.py  core_2.py  core_3.py  data_storage.py  dna_analysis.py  dna_analysis_2.py  issue_1.py  issue_2.py  issue_4_1.py  issue_4_2.py  json_pickle.py  modsum.py  output_NGG.json  output_PRIMERS.json  parse_analysis.py  primer_design.py  prueba.py
src/source/: cli.rst  conf.py  core_3.rst  index.rst  issue_1.rst  issue_4_2.rst  modules.rst
tests/: beacon_pytest.py  cli_pytest.py  core_pytest.py  issue_4_1_test.py  issue_4_2_test.py  parse_analysis_test.py  primer_design_pytest.py  test_modsum.py
