[project]
name = "rodrigo-labtfg"
version = "0.1.0"
description = "Programa para el diseño de secuencias"
authors = [
    {name = "luksgrin",email = "lugoibel@doctor.upv.es"},
    {name = "Julio",email = "jcochenta@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bio (>=1.7.1,<2.0.0)",
    "viennarna (>=2.7.0,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "sphinx (>=8.2.3,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
