[project]
name = "columbo-design"
version = "0.1.0"
description = "Program for designing genetic parts for the COLUMBO diagnostic system"
authors = [
    {name = "Julio",email = "jcochenta@gmail.com"}
    {name = "luksgrin",email = "lucas.goiriz@csic.es"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bio (>=1.7.1,<2.0.0)",
    "viennarna (>=2.7.0,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "sphinx (>=8.2.3,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
