[tool.poetry]
name = "columbo-design"
version = "0.1.0"
description = "Program for designing genetic parts for the COLUMBO diagnostic system"
authors = [
    "Julio <jcochenta@gmail.com>",
    "luksgrin <lucas.goiriz@csic.es>"
]
license = "MIT"
readme = "README.md"
packages = [
    { include = "columbo_design", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12"
bio = ">=1.7.1,<2.0.0"
viennarna = ">=2.7.0,<3.0.0"
pytest = ">=8.3.5,<9.0.0"
sphinx = ">=8.2.3,<9.0.0"
primer3-py = "^2.1.0"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
columbo-cli = "columbo_design.cli:main"
